<resources>
    <string name="app_name">Nice Weather</string>
    <string name="greeting">Good day</string>
    <string name="who">Master</string>
    <string name="morning">Good morning</string>
    <string name="afternoon">Good afternoon</string>
    <string name="evening">Good evening</string>
    <string name="night">Good night</string>
    <string name="select_part_of_the_day">Select a part of the day</string>
    <string name="ok">OK</string>
    <string name="enter_city">Enter city</string>
    <string name="select_optional_parameters">Select additional display options</string>
    <string name="temperature">Temperature</string>
    <string name="air_humidity">Air humidity</string>
    <string name="wind_speed">Wind speed</string>
    <string name="pressure">Pressure</string>
    <string name="show_weather">Show weather</string>
    <string name="test_temperature">+5</string>
    <string name="test_air_humidity">60</string>
    <string name="test_wind_speed">5</string>
    <string name="test_pressure">755</string>
    <string name="city">City</string>
    <string name="select_parameters">Select parameters</string>
    <string name="empty"> </string>
    <string name="settings">Settings</string>
    <string name="detail_weather">detail weather</string>
    <string name="cities_list">Cities list</string>
    <string name="search_hint">City</string>
    <string name="unit_percent" translatable="false">%</string>
    <string name="unit_celsius" translatable="false">°C</string>
    <string name="unit_fahrenheit" translatable="false">°F</string>
    <string name="unit_m_s" translatable="false">m/s</string>
    <string name="unit_km_h" translatable="false">km/h</string>
    <string name="unit_pascal" translatable="false">hPa</string>
    <string name="unit_torr" translatable="false">mmHg</string>
    <string name="action_settings">Settings</string>
    <string name="communicate">Communicate</string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="help">Help</string>
    <string name="units">Units</string>
    <string name="communication">Communication</string>
    <string name="rate_app">Rate app</string>
    <string name="celsius">degree Celsius</string>
    <string name="fahrenheit">degree Fahrenheit</string>
    <string name="meter_per_second">meter per second</string>
    <string name="kilometers_per_hour">kilometers per hour</string>
    <string name="pascal">pascal</string>
    <string name="millimeter_of_mercury">millimeter of mercury</string>
    <string name="owm_api_key">120b674ad2dc37f95bcf93bbb13becd2</string>
    <string name="place_not_found">Place not found</string>
    <string name="credits">Credits</string>
    <string name="dialog_add_city_title">Please input city name</string>
    <string name="dialog_add_city_button_add">Add</string>
    <string name="dialog_add_city_button_cancel">Cancel</string>
    <string name="wi_day_sunny">&#xf00d;</string>
    <string name="wi_day_cloudy">&#xf002;</string>
    <string name="wi_day_cloudy_gusts">&#xf000;</string>
    <string name="wi_day_cloudy_windy">&#xf001;</string>
    <string name="wi_day_fog">&#xf003;</string>
    <string name="wi_day_hail">&#xf004;</string>
    <string name="wi_day_haze">&#xf0b6;</string>
    <string name="wi_day_lightning">&#xf005;</string>
    <string name="wi_day_rain">&#xf008;</string>
    <string name="wi_day_rain_mix">&#xf006;</string>
    <string name="wi_day_rain_wind">&#xf007;</string>
    <string name="wi_day_showers">&#xf009;</string>
    <string name="wi_day_sleet">&#xf0b2;</string>
    <string name="wi_day_sleet_storm">&#xf068;</string>
    <string name="wi_day_snow">&#xf00a;</string>
    <string name="wi_day_snow_thunderstorm">&#xf06b;</string>
    <string name="wi_day_snow_wind">&#xf065;</string>
    <string name="wi_day_sprinkle">&#xf00b;</string>
    <string name="wi_day_storm_showers">&#xf00e;</string>
    <string name="wi_day_sunny_overcast">&#xf00c;</string>
    <string name="wi_day_thunderstorm">&#xf010;</string>
    <string name="wi_day_windy">&#xf085;</string>
    <string name="wi_solar_eclipse">&#xf06e;</string>
    <string name="wi_hot">&#xf072;</string>
    <string name="wi_day_cloudy_high">&#xf07d;</string>
    <string name="wi_day_light_wind">&#xf0c4;</string>
    <string name="wi_night_clear">&#xf02e;</string>
    <string name="wi_night_alt_cloudy">&#xf086;</string>
    <string name="wi_night_alt_cloudy_gusts">&#xf022;</string>
    <string name="wi_night_alt_cloudy_windy">&#xf023;</string>
    <string name="wi_night_alt_hail">&#xf024;</string>
    <string name="wi_night_alt_lightning">&#xf025;</string>
    <string name="wi_night_alt_rain">&#xf028;</string>
    <string name="wi_night_alt_rain_mix">&#xf026;</string>
    <string name="wi_night_alt_rain_wind">&#xf027;</string>
    <string name="wi_night_alt_showers">&#xf029;</string>
    <string name="wi_night_alt_sleet">&#xf0b4;</string>
    <string name="wi_night_alt_sleet_storm">&#xf06a;</string>
    <string name="wi_night_alt_snow">&#xf02a;</string>
    <string name="wi_night_alt_snow_thunderstorm">&#xf06d;</string>
    <string name="wi_night_alt_snow_wind">&#xf067;</string>
    <string name="wi_night_alt_sprinkle">&#xf02b;</string>
    <string name="wi_night_alt_storm_showers">&#xf02c;</string>
    <string name="wi_night_alt_thunderstorm">&#xf02d;</string>
    <string name="wi_night_cloudy">&#xf031;</string>
    <string name="wi_night_cloudy_gusts">&#xf02f;</string>
    <string name="wi_night_cloudy_windy">&#xf030;</string>
    <string name="wi_night_fog">&#xf04a;</string>
    <string name="wi_night_hail">&#xf032;</string>
    <string name="wi_night_lightning">&#xf033;</string>
    <string name="wi_night_partly_cloudy">&#xf083;</string>
    <string name="wi_night_rain">&#xf036;</string>
    <string name="wi_night_rain_mix">&#xf034;</string>
    <string name="wi_night_rain_wind">&#xf035;</string>
    <string name="wi_night_showers">&#xf037;</string>
    <string name="wi_night_sleet">&#xf0b3;</string>
    <string name="wi_night_sleet_storm">&#xf069;</string>
    <string name="wi_night_snow">&#xf038;</string>
    <string name="wi_night_snow_thunderstorm">&#xf06c;</string>
    <string name="wi_night_snow_wind">&#xf066;</string>
    <string name="wi_night_sprinkle">&#xf039;</string>
    <string name="wi_night_storm_showers">&#xf03a;</string>
    <string name="wi_night_thunderstorm">&#xf03b;</string>
    <string name="wi_lunar_eclipse">&#xf070;</string>
    <string name="wi_stars">&#xf077;</string>
    <string name="wi_storm_showers">&#xf01d;</string>
    <string name="wi_thunderstorm">&#xf01e;</string>
    <string name="wi_night_alt_cloudy_high">&#xf07e;</string>
    <string name="wi_night_cloudy_high">&#xf080;</string>
    <string name="wi_night_alt_partly_cloudy">&#xf081;</string>
    <string name="wi_cloud">&#xf041;</string>
    <string name="wi_cloudy">&#xf013;</string>
    <string name="wi_cloudy_gusts">&#xf011;</string>
    <string name="wi_cloudy_windy">&#xf012;</string>
    <string name="wi_fog">&#xf014;</string>
    <string name="wi_hail">&#xf015;</string>
    <string name="wi_rain">&#xf019;</string>
    <string name="wi_rain_mix">&#xf017;</string>
    <string name="wi_rain_wind">&#xf018;</string>
    <string name="wi_showers">&#xf01a;</string>
    <string name="wi_sleet">&#xf0b5;</string>
    <string name="wi_snow">&#xf01b;</string>
    <string name="wi_sprinkle">&#xf01c;</string>
    <string name="wi_snow_wind">&#xf064;</string>
    <string name="wi_smog">&#xf074;</string>
    <string name="wi_smoke">&#xf062;</string>
    <string name="wi_lightning">&#xf016;</string>
    <string name="wi_raindrops">&#xf04e;</string>
    <string name="wi_raindrop">&#xf078;</string>
    <string name="wi_dust">&#xf063;</string>
    <string name="wi_snowflake_cold">&#xf076;</string>
    <string name="wi_windy">&#xf021;</string>
    <string name="wi_strong_wind">&#xf050;</string>
    <string name="wi_sandstorm">&#xf082;</string>
    <string name="wi_earthquake">&#xf0c6;</string>
    <string name="wi_fire">&#xf0c7;</string>
    <string name="wi_flood">&#xf07c;</string>
    <string name="wi_meteor">&#xf071;</string>
    <string name="wi_tsunami">&#xf0c5;</string>
    <string name="wi_volcano">&#xf0c8;</string>
    <string name="wi_hurricane">&#xf073;</string>
    <string name="wi_tornado">&#xf056;</string>
    <string name="wi_small_craft_advisory">&#xf0cc;</string>
    <string name="wi_gale_warning">&#xf0cd;</string>
    <string name="wi_storm_warning">&#xf0ce;</string>
    <string name="wi_hurricane_warning">&#xf0cf;</string>
    <string name="wi_wind_direction">&#xf0b1;</string>
    <string name="wi_alien">&#xf075;</string>
    <string name="wi_celsius">&#xf03c;</string>
    <string name="wi_fahrenheit">&#xf045;</string>
    <string name="wi_degrees">&#xf042;</string>
    <string name="wi_thermometer">&#xf055;</string>
    <string name="wi_thermometer_exterior">&#xf053;</string>
    <string name="wi_thermometer_internal">&#xf054;</string>
    <string name="wi_cloud_down">&#xf03d;</string>
    <string name="wi_cloud_up">&#xf040;</string>
    <string name="wi_cloud_refresh">&#xf03e;</string>
    <string name="wi_horizon">&#xf047;</string>
    <string name="wi_horizon_alt">&#xf046;</string>
    <string name="wi_sunrise">&#xf051;</string>
    <string name="wi_sunset">&#xf052;</string>
    <string name="wi_moonrise">&#xf0c9;</string>
    <string name="wi_moonset">&#xf0ca;</string>
    <string name="wi_refresh">&#xf04c;</string>
    <string name="wi_refresh_alt">&#xf04b;</string>
    <string name="wi_umbrella">&#xf084;</string>
    <string name="wi_barometer">&#xf079;</string>
    <string name="wi_humidity">&#xf07a;</string>
    <string name="wi_na">&#xf07b;</string>
    <string name="wi_train">&#xf0cb;</string>
    <string name="wi_moon_new">&#xf095;</string>
    <string name="wi_moon_waxing_crescent_1">&#xf096;</string>
    <string name="wi_moon_waxing_crescent_2">&#xf097;</string>
    <string name="wi_moon_waxing_crescent_3">&#xf098;</string>
    <string name="wi_moon_waxing_crescent_4">&#xf099;</string>
    <string name="wi_moon_waxing_crescent_5">&#xf09a;</string>
    <string name="wi_moon_waxing_crescent_6">&#xf09b;</string>
    <string name="wi_moon_first_quarter">&#xf09c;</string>
    <string name="wi_moon_waxing_gibbous_1">&#xf09d;</string>
    <string name="wi_moon_waxing_gibbous_2">&#xf09e;</string>
    <string name="wi_moon_waxing_gibbous_3">&#xf09f;</string>
    <string name="wi_moon_waxing_gibbous_4">&#xf0a0;</string>
    <string name="wi_moon_waxing_gibbous_5">&#xf0a1;</string>
    <string name="wi_moon_waxing_gibbous_6">&#xf0a2;</string>
    <string name="wi_moon_full">&#xf0a3;</string>
    <string name="wi_moon_waning_gibbous_1">&#xf0a4;</string>
    <string name="wi_moon_waning_gibbous_2">&#xf0a5;</string>
    <string name="wi_moon_waning_gibbous_3">&#xf0a6;</string>
    <string name="wi_moon_waning_gibbous_4">&#xf0a7;</string>
    <string name="wi_moon_waning_gibbous_5">&#xf0a8;</string>
    <string name="wi_moon_waning_gibbous_6">&#xf0a9;</string>
    <string name="wi_moon_third_quarter">&#xf0aa;</string>
    <string name="wi_moon_waning_crescent_1">&#xf0ab;</string>
    <string name="wi_moon_waning_crescent_2">&#xf0ac;</string>
    <string name="wi_moon_waning_crescent_3">&#xf0ad;</string>
    <string name="wi_moon_waning_crescent_4">&#xf0ae;</string>
    <string name="wi_moon_waning_crescent_5">&#xf0af;</string>
    <string name="wi_moon_waning_crescent_6">&#xf0b0;</string>
    <string name="wi_moon_alt_new">&#xf0eb;</string>
    <string name="wi_moon_alt_waxing_crescent_1">&#xf0d0;</string>
    <string name="wi_moon_alt_waxing_crescent_2">&#xf0d1;</string>
    <string name="wi_moon_alt_waxing_crescent_3">&#xf0d2;</string>
    <string name="wi_moon_alt_waxing_crescent_4">&#xf0d3;</string>
    <string name="wi_moon_alt_waxing_crescent_5">&#xf0d4;</string>
    <string name="wi_moon_alt_waxing_crescent_6">&#xf0d5;</string>
</resources>