<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/main_margin"
    android:gravity="center"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/txtView_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:textSize="30sp" />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/imgView_weather_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/clear" />

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/imgView_temperature_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/temperature" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/txtView_temperature_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/temperature"
            android:textSize="20sp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/txtView_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/test_temperature"
            android:textSize="20sp" />
    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/imgView_wind_speed_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/wind_speed" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/txtView_wind_speed_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/wind_speed"
            android:textSize="20sp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/txtView_wind_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/test_wind_speed"
            android:textSize="20sp" />
    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/imgView_air_humidity_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/air_humidity" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/txtView_air_humidity_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/air_humidity"
            android:textSize="20sp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/txtView_air_humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/test_air_humidity"
            android:textSize="20sp" />
    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/imgView_pressure_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/pressure" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/txtView_pressure_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/pressure"
            android:textSize="20sp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/txtView_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/test_pressure"
            android:textSize="20sp" />
    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v7.widget.LinearLayoutCompat>
